# tyko

./: .babelrc.js  .babelrc.json  .coveragerc  .dockerignore  .env  .eslintrc.yml  .gitignore  .pylintrc  .sonarcloud.properties  CMakeLists.txt  CPackConfig.cmake  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  README.md  alembic.ini  conanfile.py  conanfile.txt  docker-compose.yml  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: audit.yml  sonarqube.yml
CI/build_VS2017/: Dockerfile
CI/build_VS2019/: Dockerfile  deps.py  packages.config  unattend.xml  vcvarsall.bat
CI/build_VS2019/chocolatey/: packages.config
CI/jenkins/: pylintrc
CI/jenkins/dockerfiles/build_VS2019/: Dockerfile
CI/jenkins/dockerfiles/server_testing/: Dockerfile
CI/jenkins/dockerfiles/testing_javascript/: Dockerfile
CI/js_testing/: Dockerfile
CI/npm_audit/: Dockerfile
CI/shared_docker_scripts/: package.bat
CI/sonarqube/scanner/: Dockerfile
CI/testing_javascript/: Dockerfile
alembic/: env.py
alembic/versions/: 364bf8893123_added_files_table.py  a6f912f5e00f_make_project_status_a_enumuration.py  d008a138763c_format_specific_items.py
avforms/: __init__.py  __main__.py  commands.py  config.py  data_provider.py  database.py  decorators.py  entities.py  frontend.py  middleware.py  routes.py  run.py  scheme.py
avforms/static/js/: submitform.js
avforms/templates/: about.html  layout.html  newentity.html  objects.html
client/: ApiModel.qml  CMakeLists.txt  Config.cpp  Config.h  ConfigDialog.qml  CurlPostBehavior.cpp  CurlPostBehavior.h  EditingDialog.qml  ProjectView.qml  ProjectsPage.qml  ProjectsViewTable.qml  main.cpp  main.qml  postBehavior.h  projectadder.cpp  projectadder.h  qml.qrc  qtPostBehavior.cpp  qtPostBehavior.h  qtquickcontrols2.conf  resource.js  tests.qrc  tst_editor.cpp  tst_editor.qml  tyko.js
database/: Dockerfile  av_preservation.sql
deploy/: Dockerfile  docker-compose.yml  start.sh
deploy/nginx/: nginx.conf
deploy/nginx/conf/: blue.conf  green.conf  tyko.conf
deploy/tyko/: Dockerfile  gunicorn.conf.py  setup_alembic.py
temp/: .babelrc.js
tests/: api.test.js  conftest.py  item_details.test.js  load_format_options.test.js  metadataWidgets.test.js  noteModal.test.js  setup-jest.js  test_api.py  test_database.py  test_frontend.py  test_pbcore.py  test_routes.py  test_server.py  test_util.py  utils.test.js  widgets.test.js
tests/feature/: database.feature  test_database_feature.py
tyko/: __init__.py  __main__.py  config.py  data_provider.py  database.py  decorators.py  entities.py  exceptions.py  frontend.py  middleware.py  routes.py  run.py  schema.py  scheme.py  utils.py
tyko/pbcore/: __init__.py  pbcore.py
tyko/pbcore/templates/: pbcore.xml
tyko/schema/: __init__.py  avtables.py  collection.py  contacts.py  formats.py  instantiation.py  items.py  notes.py  objects.py  projects.py  treatment.py  vendor.py
tyko/static/css/: sticky-footer-navbar.css
tyko/static/js/: api.js  editData.js  init_site.mjs  item_details.mjs  load_format_options.mjs  metadataWidgets.mjs  noteModal.js  notes.js  request.js  submitform.js  utils.mjs  widgets.js
tyko/static/js/__mocks__/: request.js
tyko/templates/: _details_macros.html  _file_macros.html  _form_macros.html  _item_macros.html  _macros.html  _object_macros.html  about.html  collection_details.html  collections.html  create_entity.html  details_table.html  dialog_boxes.html  dynamiclist.html  edit_note.html  file_details.html  form_new_collection.html  formats.html  index.html  item_details.html  items.html  layout.html  more.html  navbar.html  new_object.html  new_project.html  newentity.html  object_details.html  objects.html  panel_details.html  project_details.html  projects.html
tyko/templates/forms/: new_audio_cassette.html
tyko/views/: cassette_tape.py  files.py  object_item.py  project.py  project_object.py
